--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.17",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/interaction": "^6.1.17",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/vue3": "^6.1.17",
     "@pinia/nuxt": "^0.10.1",
     "axios": "^1.8.4",
     "nuxt": "^3.16.1",
