--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@fullcalendar/vue3": "^6.1.17",
     "@pinia/nuxt": "^0.10.1",
     "axios": "^1.8.4",
+    "bell": "^10.0.0",
     "fullcalendar": "^6.1.17",
+    "lucide-vue-next": "^0.503.0",
     "nuxt": "^3.16.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
